2012-04-02  Adam Barth  <abarth@webkit.org>

        [Chromium] Move a number of virtual functions from WebKitPlatformSupport.h into Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=82865

        Reviewed by Kent Tamura.

        Moving these functions into Platform.h allows them to be called from
        Platform (aka WebCore/platform), as discussed in 
        https://lists.webkit.org/pipermail/webkit-dev/2012-March/020166.html

        * chromium/public/Platform.h:
        (WebKit):
        (Platform):
        (WebKit::Platform::mimeRegistry):
        (WebKit::Platform::audioHardwareSampleRate):
        (WebKit::Platform::audioHardwareBufferSize):
        (WebKit::Platform::createAudioDevice):
        (WebKit::Platform::sampleGamepads):
        (WebKit::Platform::visitedLinkHash):
        (WebKit::Platform::isLinkVisited):
        (WebKit::Platform::signedPublicKeyAndChallengeString):
        (WebKit::Platform::memoryUsageMB):
        (WebKit::Platform::actualMemoryUsageMB):
        (WebKit::Platform::lowMemoryUsageMB):
        (WebKit::Platform::highMemoryUsageMB):
        (WebKit::Platform::highUsageDeltaMB):
        (WebKit::Platform::prefetchHostName):
        (WebKit::Platform::createSocketStreamHandle):
        (WebKit::Platform::userAgent):
        (WebKit::Platform::cacheMetadata):
        (WebKit::Platform::createThread):
        (WebKit::Platform::currentThread):
        (WebKit::Platform::decrementStatsCounter):
        (WebKit::Platform::incrementStatsCounter):
        (WebKit::Platform::loadResource):
        (WebKit::Platform::loadAudioResource):
        (WebKit::Platform::sandboxEnabled):
        (WebKit::Platform::suddenTerminationChanged):
        (WebKit::Platform::defaultLocale):
        (WebKit::Platform::currentTime):
        (WebKit::Platform::monotonicallyIncreasingTime):
        (WebKit::Platform::setSharedTimerFiredFunction):
        (WebKit::Platform::setSharedTimerFireInterval):
        (WebKit::Platform::stopSharedTimer):